@@ -1,6 +1,8 @@
 Version 0.13.3
 	GChemPaint:
 		* Fixed build with gcc-4.6. [#32363]
+	Other:
+		* Don't use POLLRDHUP when not defined. [#32768]
 
 Version 0.13.2
 	GChemPaint:
